--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,6 +63,7 @@ add_message_files(
 add_service_files(
   FILES
   GetDeviceList.srv
+  GetCameraInfo.srv
 )
 
 ## Generate actions in the 'action' folder
