add multidevice support

--- a/cfg/Orbbec.cfg
+++ b/cfg/Orbbec.cfg
@@ -67,6 +67,6 @@ gen.add("ir_mode", int_t, 0, "Set ir stream mode", 9, 1, 16, edit_method = ir_mo
 # gen.add("ir_height", int_t, 0, "Set ir stream height", 480)
 # gen.add("ir_fps", int_t, 0, "Set ir stream fps", 30)
 
-gen.add("d2c", bool_t, 0, "Set depth to color registration")
+# gen.add("d2c", bool_t, 0, "Set depth to color registration")
 
 exit(gen.generate(PACKAGE, "orbbec_camera", "Orbbec"))
