fix libyuv compile error

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -143,16 +143,11 @@ message("Could not find Orbbec SDK!")
 endif()
 
 add_subdirectory(libjpeg)
-# find_package(JPEG)
-# if(!JPEG_FOUND)
-# message("Could not find libjpeg")
-# endif()
+set(JPEG_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/libjpeg")
+set(JPEG_LIBRARY jpeg-static)
+set(JPEG_FOUND TRUE)
 
 add_subdirectory(libyuv)
-# find_package(YUV)
-# if(!YUV_FOUND)
-# message("Could not find libyuv")
-# endif()
 
 set(orbbec_camera_INCLUDE_DIR "include/orbbec_camera")
 set(YUV_INCLUDE_DIR "libyuv/include")
