--- a/libyuv/CMakeLists.txt
+++ b/libyuv/CMakeLists.txt
@@ -35,10 +35,10 @@ ADD_EXECUTABLE			( yuvconvert ${ly_base_dir}/util/yuvconvert.cc )
 TARGET_LINK_LIBRARIES	( yuvconvert ${ly_lib_static} )
 
 
-INCLUDE ( FindJPEG )
+# INCLUDE ( FindJPEG )
 if (JPEG_FOUND)
   include_directories( ${JPEG_INCLUDE_DIR} )
-  target_link_libraries( yuvconvert ${JPEG_LIBRARY} )
+  target_link_libraries( ${ly_lib_static} ${JPEG_LIBRARY} )
   add_definitions( -DHAVE_JPEG )
 endif()
 
