replace SDK to 1.4.1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -203,10 +203,14 @@ install(DIRECTORY include
   )
 
   install(DIRECTORY
-  ${ORBBEC_INCLUDE_DIR}
-  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}/
+    ${ORBBEC_INCLUDE_DIR}
+    DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}/
   )
 
+
+install(DIRECTORY launch
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+)
 install(DIRECTORY
   ${ORBBEC_LIBS}/
   DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}/
