--- a/.gitignore
+++ b/.gitignore
@@ -762,7 +762,8 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
-
+.obj-x86_64-linux-gnu/*
+debian/*
 ### VisualStudio Patch ###
 # Additional files built by Visual Studio
 
