fix read orbbec config

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -254,6 +254,11 @@ install(DIRECTORY
 install(DIRECTORY launch
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
   )
+
+install(DIRECTORY config
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+  )
+
 install(DIRECTORY
   ${ORBBEC_LIBS}/
   DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}/
