--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,11 +47,11 @@ message(STATUS "ORRBEC Machine Bits : ${MACHINES_BIT}")
 if ((${MACHINES} MATCHES "x86_64") AND (${MACHINES_BIT} MATCHES "64"))
   set(HOST_PLATFORM "x64")
 elseif (${MACHINES} MATCHES "arm")
-  set(HOST_PLATFORM "arm")
+  set(HOST_PLATFORM "arm32")
 elseif ((${MACHINES} MATCHES "aarch64") AND (${MACHINES_BIT} MATCHES "64"))
   set(HOST_PLATFORM "arm64")
 elseif ((${MACHINES} MATCHES "aarch64") AND (${MACHINES_BIT} MATCHES "32"))
-  set(HOST_PLATFORM "arm")
+  set(HOST_PLATFORM "arm32")
 endif ()
 
 set(ORBBEC_LIBS ${CMAKE_CURRENT_SOURCE_DIR}/SDK/lib/${HOST_PLATFORM})
