--- a/package.xml
+++ b/package.xml
@@ -1,25 +1,30 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>orbbec_camera</name>
-  <version>1.2.9</version>
-  <description>Orbbec Camera package</description>
-  <maintainer email="mocun@orbbec.com">Joe Dong</maintainer>
-  <license>Apache License 2.0</license>
-  <buildtool_depend>catkin</buildtool_depend>
-  <depend>camera_info_manager</depend>
-  <depend>cv_bridge</depend>
-  <depend>dynamic_reconfigure</depend>
-  <depend>image_geometry</depend>
-  <depend>image_transport</depend>
-  <depend>libudev-dev</depend>
-  <depend>libusb-1.0-dev</depend>
-  <depend>message_filters</depend>
-  <depend>message_generation</depend>
-  <depend>message_runtime</depend>
-  <depend>roscpp</depend>
-  <depend>sensor_msgs</depend>
-  <depend>std_srvs</depend>
-  <depend>tf2_ros</depend>
-  <depend>tf2</depend>
+    <name>orbbec_camera</name>
+    <version>1.2.9</version>
+    <description>Orbbec Camera package</description>
+    <maintainer email="mocun@orbbec.com">Joe Dong</maintainer>
+    <license>Apache License 2.0</license>
+    <buildtool_depend>catkin</buildtool_depend>
+    <depend>camera_info_manager</depend>
+    <depend>cv_bridge</depend>
+    <depend>dynamic_reconfigure</depend>
+    <depend>image_geometry</depend>
+    <depend>image_transport</depend>
+    <depend>libudev-dev</depend>
+    <depend>libusb-1.0-dev</depend>
+    <depend>message_filters</depend>
+    <depend>message_generation</depend>
+    <depend>message_runtime</depend>
+    <depend>roscpp</depend>
+    <depend>sensor_msgs</depend>
+    <depend>std_srvs</depend>
+    <depend>tf2_ros</depend>
+    <depend>tf2</depend>
+    <depend>pluginlib</depend>
+    <depend>nodelet</depend>
+    <export>
+        <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
+    </export>
 </package>
