add license header

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -239,7 +239,7 @@ install(DIRECTORY ${ORBBEC_INCLUDE_DIR} DESTINATION ${CATKIN_PACKAGE_INCLUDE_DES
 install(DIRECTORY launch DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
 install(DIRECTORY config DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
 install(FILES nodelet_plugins.xml DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
-
+install(FILES LICENSE DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
 install(DIRECTORY ${ORBBEC_LIBS_DIR}/
   DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}/
   FILES_MATCHING PATTERN "*.so"
