append target to EXECUTABLES list in add_obbec_exevutable macro; fixes install bug referenced in issue #22

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -218,6 +218,7 @@ macro(add_orbbec_executable TARGET SOURCES)
   add_executable(${TARGET} ${SOURCES})
   target_link_libraries(${TARGET} ${COMMON_LINK_LIBRARIES} ${PROJECT_NAME})
   target_include_directories(${TARGET} PUBLIC ${COMMON_INCLUDE_DIRS})
+  list(APPEND EXECUTABLES ${TARGET})
 endmacro()
 
 # Add nodes
